# Her.axera

./: .build-state.json  .dockerignore  .editorconfig  .gitignore  .tdd-state.json  CMakeLists.txt  LICENSE  README.md  deploy.sh  docker-compose.yml  her-axera
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-ax-api.txt  requirements-fireredasr-aed.txt  requirements-model-download.txt  requirements-wenet-onnx.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: asr.py  llm.py  models.py  openai_compat.py  sessions.py  speakers.py  system.py  system_prompt.py  tts.py  users.py  wakewords.py  ws_dialogue.py
backend/app/core/: audio_codec.py  config.py  errors.py  security.py  tracing.py
backend/app/core/tests/: test_config.py  test_errors.py  test_tracing.py
backend/app/models/: asr.py  common.py  llm.py  openai.py  speaker.py  tts.py  user.py  wakeword.py
backend/app/models/tests/: test_asr.py  test_common.py  test_llm.py  test_openai.py  test_speaker.py  test_tts.py  test_user.py
backend/app/services/: asr_service.py  dialogue_service.py  llm_service.py  model_download_service.py  speaker_service.py  tool_registry.py  tts_service.py  user_service.py  vad_service.py  wakeword_service.py
backend/app/services/tests/: test_llm_service.py  test_model_download_service.py  test_tool_registry.py  test_user_service.py  test_wakeword_service.py
backend/tests/: test_api.py  test_deploy_scripts.py  test_download_ax_models.py  test_wakeword_api.py
backend/tools/: download_ax_models.py  performance_tester.py
docs/: asr_api_design.md  ax_board_nfs_run.md  fireredasr_aed_asr_provider.md  llm_api_design.md  openai_compatible_api_design.md  sensevoice_asr_provider.md  tts_api_design.md  voice_dialogue_cascade_design.md  (+1 more)
sdk/: README.md  pyproject.toml
sdk/her_axera_sdk/: __init__.py  _download.py  _llm.py
(+22 files in other folders)
