[project]
name = "her-voice-backend"
version = "0.1.0"
description = "RESTful backend skeleton for ASR + LLM + TTS cascaded voice dialogue."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "python-multipart>=0.0.9,<1.0.0",
]

[tool.ruff]
line-length = 120
