[project]
name = "her-voice-backend"
version = "0.1.0"
description = "RESTful backend skeleton for ASR + LLM + TTS cascaded voice dialogue."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "requests>=2.31.0,<3.0.0",
  "edge-tts>=7.0.0,<8.0.0",
  "ml-dtypes>=0.1.0,<1.0.0",
  "silero-vad-axera>=0.1.1,<1.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.28"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app", "tests"]
asyncio_mode = "auto"
