[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "her-axera-sdk"
version = "0.1.0"
description = "Her.axera voice dialogue SDK — ASR + LLM + TTS pipeline for AX650 boards"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Her.axera", email = "" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "numpy>=1.20",
    "requests>=2.31",
    "huggingface_hub>=0.30",
]

[project.optional-dependencies]
asr = ["ax_asr"]
tts = ["ax_tts"]
all = ["ax_asr", "ax_tts"]

[tool.setuptools]
package-dir = { "" = "." }
